--- a/test/cases/statement_broken_2/expected.html
+++ b/test/cases/statement_broken_2/expected.html
@@ -1,1 +1,1 @@
-Error('Error: No closing statement found for opening statement "if title".')
+Error('No closing statement found for opening statement "if title".')
