--- a/test/cases/statement_if_else/input.html
+++ b/test/cases/statement_if_else/input.html
@@ -1,7 +1,7 @@
 <body>
 {% if href in ['layout.html', 'index.html, 'about.html', 'user.html'] %}
 <h1>{{title}}</h1>
- {%else if href == "random.html" %}
+ {%elif href == "random.html" %}
 <h2>{{title}}</h2>
 {%else%}
 <h3>{{title}}</h3>
