--- a/test/cases/statement_inline/input.html
+++ b/test/cases/statement_inline/input.html
@@ -1,3 +1,5 @@
 <title>{%block title%} {%endblock%}</title>
 
 <div>class="{%if class%}{{class}}{%endif%}"</div>
+
+<div>class="{%if class%}{{class}}{%else%}default{%endif%}"</div>
