--- a/test/cases/statement_broken_3/expected.html
+++ b/test/cases/statement_broken_3/expected.html
@@ -1,1 +1,1 @@
-Error('Closung statement "endif" doesn't match Opening Statement "for item in seq".')
+Error('Closing statement "endif" doesn't match Opening Statement "for item in seq".')
