remove hard coded list of non closing statements
The new logic assumes that all statements that start with "end" are
closing statements and then searches for the closest statement that
has the same name without the "end" and uses it as the start for a block.

All other statements are handled as non closing statements.

--- a/test/cases/statement_broken_3/expected.html
+++ b/test/cases/statement_broken_3/expected.html
@@ -1,1 +1,1 @@
-Error('Closing statement "endif" doesn't match Opening Statement "for item in seq".')
+Error('No opening statement found for closing statement "{% endif %}".')
