--- a/test/cases/statement_inline/expected.html
+++ b/test/cases/statement_inline/expected.html
@@ -1,5 +1,5 @@
 <title>{% block title %}{% endblock %}</title>
 
-<div>class="{% if class %}{{ class }}{% endif %}"</div>
+<div class="{% if class %}{{ class }}{% endif %}"></div>
 
-<div>class="{% if class %}{{ class }}{% else %}default{% endif %}"</div>
+<div class="{% if class %}{{ class }}{% else %}default{% endif %}"></div>
