--- a/test/cases/statement_long/expected.html
+++ b/test/cases/statement_long/expected.html
@@ -1,9 +1,10 @@
 <ul>
   {%
     for href, caption in [
-    ('index.html', 'Index'),
-    ('about.html', 'About'),
-    ('downloads.html', 'Downloads')]
+      ('index.html', 'Index'),
+      ('about.html', 'About'),
+      ('downloads.html', 'Downloads')
+    ]
   %}
     <li><a href="{{ href }}">{{ caption }}</a></li>
   {% endfor %}
