--- a/test/cases/statement_long/input.html
+++ b/test/cases/statement_long/input.html
@@ -1,8 +1,9 @@
 <ul>
 {% for href, caption in [
-('index.html', 'Index'),
-    ('about.html', 'About'),  
-  ('downloads.html', 'Downloads')]
+  ('index.html', 'Index'),
+  ('about.html', 'About'),  
+  ('downloads.html', 'Downloads')
+]
 %}
 <li><a href="{{ href }}">{{ caption }}</a></li>
 {% endfor %}
