handle start and end delimiters as seperate symbols
The start delimiter triggers `trim_blocks` and the end delimiter
`lstrip_blocks`.

--- a/test/cases/expression_whitespace/expected.html
+++ b/test/cases/expression_whitespace/expected.html
@@ -2,8 +2,8 @@
   {{- some_variable -}}
 </div>
 <div class="extemely_long__class_name extemely_long__class_name--modifier">
-  {{- some_variable -}}
+  {{ some_variable -}}
 </div>
 <div class="extemely_long__class_name extemely_long__class_name--modifier">
-  {{- some_variable -}}
+  {{- some_variable }}
 </div>
