--- a/test/cases/statement_whitespace/expected.html
+++ b/test/cases/statement_whitespace/expected.html
@@ -1,6 +1,6 @@
 <ul>
-  {%+ set seq +%}
+  {% set seq +%}
   {%- for item in seq -%}
     <li>{{ item }}</li>
-  {%- endfor -%}
+  {%- endfor %}
 </ul>
