--- a/test/cases/statement_broken/expected.html
+++ b/test/cases/statement_broken/expected.html
@@ -1,1 +1,1 @@
-Error('No opening statement found for closing statement "{% endif %}"')
+Error(`No opening statement found for closing statement "{% endif %}"`)
